// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTitle  core/editor store available initial state render for new post 1`] = `
<div>
  <div
    class="classy-field classy-field--event-title"
  >
    <div
      class="classy-field__title"
    >
      <h3>
        Event Title
      </h3>
    </div>
    <div
      class="classy-field__inputs"
    >
      <div
        class="components-base-control components-input-control classy-field__control classy-field__control--input css-fothu4-Wrapper-boxSizingReset ej5x27r4"
      >
        <div
          class="components-base-control__field css-2txpkp-StyledField ej5x27r3"
        >
          <div
            class="components-flex components-input-base em5sgkm5 css-8kwvf6-PolymorphicDiv-Flex-base-ItemsColumn-Root e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="InputBase"
          >
            <div
              class="components-input-control__container css-1x6d9pt-Container-containerDisabledStyles-containerWidthStyles em5sgkm4"
            >
              <input
                class="components-input-control__input css-19kifla-Input-dragStyles-fontSizeStyles-sizeStyles-customPaddings em5sgkm3"
                id="inspector-input-control-0"
                value=""
              />
              <div
                aria-hidden="true"
                class="components-input-control__backdrop css-13crio-BackdropUI-rtl em5sgkm6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventTitle  core/editor store available initial state render with title for existing post 1`] = `
<div>
  <div
    class="classy-field classy-field--event-title"
  >
    <div
      class="classy-field__title"
    >
      <h3>
        Event Title
      </h3>
    </div>
    <div
      class="classy-field__inputs"
    >
      <div
        class="components-base-control components-input-control classy-field__control classy-field__control--input css-fothu4-Wrapper-boxSizingReset ej5x27r4"
      >
        <div
          class="components-base-control__field css-2txpkp-StyledField ej5x27r3"
        >
          <div
            class="components-flex components-input-base em5sgkm5 css-8kwvf6-PolymorphicDiv-Flex-base-ItemsColumn-Root e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="InputBase"
          >
            <div
              class="components-input-control__container css-1x6d9pt-Container-containerDisabledStyles-containerWidthStyles em5sgkm4"
            >
              <input
                class="components-input-control__input css-19kifla-Input-dragStyles-fontSizeStyles-sizeStyles-customPaddings em5sgkm3"
                id="inspector-input-control-1"
                value="Test Event"
              />
              <div
                aria-hidden="true"
                class="components-input-control__backdrop css-13crio-BackdropUI-rtl em5sgkm6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventTitle  core/editor store not available initial state render for new post 1`] = `
<div>
  <div
    class="classy-field classy-field--event-title"
  >
    <div
      class="classy-field__title"
    >
      <h3>
        Event Title
      </h3>
    </div>
    <div
      class="classy-field__inputs"
    >
      <div
        class="components-base-control components-input-control classy-field__control classy-field__control--input css-fothu4-Wrapper-boxSizingReset ej5x27r4"
      >
        <div
          class="components-base-control__field css-2txpkp-StyledField ej5x27r3"
        >
          <div
            class="components-flex components-input-base em5sgkm5 css-8kwvf6-PolymorphicDiv-Flex-base-ItemsColumn-Root e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="InputBase"
          >
            <div
              class="components-input-control__container css-1x6d9pt-Container-containerDisabledStyles-containerWidthStyles em5sgkm4"
            >
              <input
                class="components-input-control__input css-19kifla-Input-dragStyles-fontSizeStyles-sizeStyles-customPaddings em5sgkm3"
                id="inspector-input-control-2"
                value=""
              />
              <div
                aria-hidden="true"
                class="components-input-control__backdrop css-13crio-BackdropUI-rtl em5sgkm6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventTitle  core/editor store not available initial state render with title for existing post 1`] = `
<div>
  <div
    class="classy-field classy-field--event-title"
  >
    <div
      class="classy-field__title"
    >
      <h3>
        Event Title
      </h3>
    </div>
    <div
      class="classy-field__inputs"
    >
      <div
        class="components-base-control components-input-control classy-field__control classy-field__control--input css-fothu4-Wrapper-boxSizingReset ej5x27r4"
      >
        <div
          class="components-base-control__field css-2txpkp-StyledField ej5x27r3"
        >
          <div
            class="components-flex components-input-base em5sgkm5 css-8kwvf6-PolymorphicDiv-Flex-base-ItemsColumn-Root e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="InputBase"
          >
            <div
              class="components-input-control__container css-1x6d9pt-Container-containerDisabledStyles-containerWidthStyles em5sgkm4"
            >
              <input
                class="components-input-control__input css-19kifla-Input-dragStyles-fontSizeStyles-sizeStyles-customPaddings em5sgkm3"
                id="inspector-input-control-3"
                value="Classy title"
              />
              <div
                aria-hidden="true"
                class="components-input-control__backdrop css-13crio-BackdropUI-rtl em5sgkm6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
